# pade

./: .gitignore  AGENTS.md  CHANGELOG.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  analysis.py  app.py  evaluation.py  psf_parser.py  pyproject.toml  requirements.txt  schematic.py  setup.py  spectre.py  test.py  utils.py
.devcontainer/: Dockerfile  devcontainer.json
docs/: INSTALL_SKY130.md
docs/source/: api.rst  conf.py  index.rst
docs/source/_templates/: class_template.rst  module_template.rst
docs/source/autosummary/: pade.analysis.Analysis.rst  pade.pade.rst  (+47 more)
examples/comopnents/: amplifiers.py
examples/pdk/: __init__.py  rules.py
examples/scripts/: amplifier_test.py  test_cap_mim.py  test_comparator_layout.py  test_digital_layout.py  test_drc_rules.py  test_inverter_layout.py  test_transistor_layout.py  test_via.py
examples/testbenches/: __init__.py  rc_filter.py  tb_amplifier.py
examples/tutorials/: 01_core_pade.ipynb  02_sigma_delta_sky130.ipynb  04_mim_capacitor_sky130.ipynb  05_inverter_dc_gain.ipynb  06_comparator_tran.ipynb
examples/utils/: __init__.py  design_runner.py  drc.py  iverilog.py  lvs.py  openroad.py  pex.py  v2spice.py  vcd.py  yosys.py
gui/: ast_test.py  main_win.py  main_window_ctrl.py  main_window_ui.py
gui/uifiles/: main_win.ui
pade/: __init__.py  analysis.py  evaluation.py  layout.py  logging.py  manager.py  pade.py  psf_parser.py  schematic.py  signal.py  skill.py  spectre.py  ssh_utils.py  statement.py  stdlib.py  test.py  utils.py
pade.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
pade/backends/: __init__.py  base.py
pade/core/: __init__.py  cell.py  net.py  parameter.py  terminal.py  testbench.py
pade/layout/: __init__.py  cell.py  connectivity.py  geometry.py  instance_list.py  layout.py  pattern.py  port.py  ref.py  route.py  routing.py  shape.py  transform.py
pade/statement/: __init__.py  analysis.py  base.py  ic.py  include.py  options.py  save.py
pade/stdlib/: __init__.py  ahdl_lib.py  analog_lib.py  digital_lib.py  passives.py  sources.py
pade/utils/: __init__.py  circuit.py  layermap.py  parallel.py
scripts/: install_sky130.sh
stdlib/: analog_lib.py
templates/: components.txt  main.txt  tb.py  tb.txt
(+61 files in other folders)
