[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pade"
version = "0.0.1"
authors = [
  { name="Fredrik Feyling", email="fredrik.feyling@hotmail.com" },
]
description = "Python based Analog Design Environment"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]
dependencies = [
    'inform',
    'matplotlib',
    'numpy',
    'psf-utils',
    'scipy',
    'shlib',
    'pint',
    'click',
    'pandas',
    'pyyaml',
    'mpire'
]
