[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pade"
version = "1.0.0-dev"
authors = [
  { name="Fredrik Feyling", email="fredrik.feyling@hotmail.com" },
]
description = "Python based Analog Design Environment"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]
dependencies = [
    'numpy',
    'scipy',
    'shapely>=2.0',
    'gdstk>=0.9',
]

[project.optional-dependencies]
dev = [
    'matplotlib',
    'pandas',
    'psf-utils',  # For parsing Spectre results
    'ltspice',    # For parsing NGspice/SPICE raw files
    'bokeh',
]
