[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pade"
version = "0.1.0"
authors = [
  { name="Fredrik Feyling", email="fredrik.feyling@hotmail.com" },
]
description = "Programmatic Analog Design Environment"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    'numpy',
    'scipy',
    'shapely>=2.0',
    'gdstk>=0.9',
]

[project.optional-dependencies]
dev = [
    'matplotlib',
    'pandas',
    'psf-utils',  # For parsing Spectre results
    'ltspice',    # For parsing NGspice/SPICE raw files
    'bokeh',
]
